# FAST-CAMPUS-Headhunting-Platform

./: .gitignore  Dockerfile  Dockerfile.base  Pipfile  README.md  deploy.sh  log.sh  pyproject.toml  requirements.txt
.config/: app.nginx  nginx.conf  supervisord.conf
.elasticbeanstalk/: config.yml
app/administrator/: admin.py  apps.py  filters.py  mixins.py  models.py
app/administrator/migrations/: 0001_initial.py  0002_auto_20181122_0058.py  0002_staticcontent_index_html.py  0003_auto_20181122_0122.py  0003_staticcontent_index_mobile_html.py  0004_auto_20181122_0156.py  0004_mailinggroup.py  0005_create_initial_mailinggroup.py  0005_staticcontent_index_height.py  0006_auto_20181129_0808.py  0006_auto_20190223_1805.py  0007_auto_20181129_0830.py  0007_auto_20190412_1751.py  0008_auto_20181203_2222.py  0009_company_url.py  0010_auto_20181203_2251.py
app/config/: jinja2.py  urls.py  views.py
app/config/settings/: base.py  dev.py  local.py  production.py
app/config/urls/: __init__.py  apis.py
app/courses/: admin.py  apis.py  apps.py  context_processors.py  models.py  serializers.py
app/courses/migrations/: 0001_initial.py  0002_auto_20181112_2300.py  0003_auto_20181125_0259.py  0004_auto_20181227_2203.py
app/courses/urls/: apis.py
app/members/: admin.py  apis.py  backends.py  filters.py  forms.py  models.py  permissions.py  tests.py  views.py
app/members/apis/: user.py  (+2 more)
app/templates/: 403.html  base.html  base.jinja2  base_header.jinja2  base_narrow_header.jinja2  company_list.jinja2  index.jinja2  sample.html
app/utils/: models.py  permissions.py
(+93 files in other folders)
